--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -48,10 +48,10 @@
                 </div>
                 <div id="full-collapse-list">
                   <div class="list-group">
-                      <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                      <a href="add-new-property.html" class="list-group-item list-group-item-action">
                         <i class="bi bi-plus"></i>
                       </a>
-                      <a href="#" class="list-group-item list-group-item-action active">Property #1</a>
+                      <a href="#" class="list-group-item list-group-item-action active"  aria-current="true">Property #1</a>
                       <a href="#" class="list-group-item list-group-item-action">Property #2</a>
                       <a href="#" class="list-group-item list-group-item-action">Property #3</a>
                   </div>
@@ -59,75 +59,75 @@
               </div>
               <div class="vr" id="v-bar"></div>
               <div id="property-info-wrapper">
-                <!-- <div id="photos">
-                  <div id="carouselExampleIndicators" class="carousel slide">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="images/Edwards-House.jpg" class="d-block">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/cullen_kitchen.jpg" class="d-block">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/cullen_living_room.jpg" class="d-block">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-                </div> -->
                 <div id="property-main-info">
                   <h5>Listing Information</h5>
                   <form action="#" method="PUT">
                     <div class="row">
                       <div class="form-group col-md-6">
                         <label for="name">Property Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Edward Cullen's House">
+                        <input type="text" class="form-control" id="name" placeholder="Listing Name" value="Edward Cullen's House">
                       </div>
                       <div class="form-group col-md-6">
                         <label for="Address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="(we won't share this)">
+                        <input type="text" class="form-control" id="address" placeholder="(we won't share this)" value="123 Vampire Lane">
                       </div>
                     </div>
                     <div class="form-group">
                       <label for="about">About</label>
-                      <textarea type="text" class="form-control" id="about" placeholder="Tell us about the place!"></textarea>
+                      <textarea type="text" class="form-control" id="about" placeholder="Tell us about the place!">Great neighbourhood, great people, totally do not suck blood.</textarea>
                     </div>
                     <div class="row form-small-grid">
                       <div class="form-group col-md-6 form-small-grid-item">
                         <label for="bedrooms">Bedrooms</label>
-                        <input type="text" class="form-control short-input" id="bedrooms">
+                        <input type="text" class="form-control short-input" id="bedrooms" value="4">
                       </div>
                       <div class="form-group col-md-6 form-small-grid-item">
                         <label for="bathrooms">Bathrooms</label>
-                        <input type="text" class="form-control short-input" id="bathrooms">
+                        <input type="text" class="form-control short-input" id="bathrooms" value="2">
                       </div>
                       <div class="form-group col-md-6 form-small-grid-item">
                         <label for="sleeps">Sleeps</label>
-                        <input type="text" class="form-control short-input" id="sleeps">
+                        <input type="text" class="form-control short-input" id="sleeps" value="0">
                       </div>
                       <div class="form-group col-md-6 form-small-grid-item">
                         <label for="guests">Guests</label>
-                        <input type="text" class="form-control short-input" id="guests">
+                        <input type="text" class="form-control short-input" id="guests" value="6">
                       </div>
                     </div>
                     <div class="form-group">
                       <label for="amenities">Amenities</label>
-                      <textarea type="text" class="form-control" id="amenities" placeholder="What's nearby?"></textarea>
+                      <textarea type="text" class="form-control" id="amenities" placeholder="What's nearby?">The surrounding woods is beautiful to go on hikes...alone...at night. Don't mind the howling wolves.
+                      </textarea>
                     </div>
                     <button type="submit" class="btn btn-primary submit-btn">Update</button>
                   </form>
+                </div>
+                <hr class="hr" /> 
+                <div id="photos">
+                  <div>
+                    <h5>Photos</h5>
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade ">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="images/cabin.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/cullen_kitchen.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/cullen_living_room.jpg" class="d-block w-100">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+                  </div>
                 </div>
                 <hr class="hr" />
                 <div id="custom-rates">
