--- a/P1/add-new-property.html
+++ b/P1/add-new-property.html
@@ -60,7 +60,7 @@
               <div class="vr" id="v-bar"></div>
               <div id="property-info-wrapper">
                 <div id="property-main-info">
-                  <h5>Listing Information</h5>
+                  <h5>Add New Property</h5>
                   <form action="#" method="PUT">
                     <div class="row">
                       <div class="form-group col-md-6">
@@ -117,47 +117,6 @@
                   <div>
                     <h5>Display</h5>
                   </div>
-                </div>
-                <hr class="hr" />
-                <div id="custom-rates">
-                  <h5>Custom Rates & Availability</h5>
-                  <div id="request-existing">
-                    <h6>Existing Changes</h6>
-                    <ul class="list-group ">
-                      <p>Add Custom Changes Below</p>
-                    </ul>
-                  </div>
-                  <div id="request-custom">
-                    <h6>Set Custom</h6>
-                    <form action="#" method="PUT">
-                      <div class="row">
-                        <div class="form-group col-md-6" id="req-custom-date-picker">
-                          <input id="custom-start" type="text" placeholder="Start" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control border-1">
-                        </div>
-                        <div class="form-group col-md-6" id="req-custom-date-picker">
-                          <input id="custom-end" type="text" placeholder="End" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control border-1">
-                        </div>
-                      </div>
-                      <div class="form-check">
-                        <label class="form-check-label" for="unavailable">
-                          Unavailable
-                        </label>
-                        <input class="form-check-input" type="checkbox" value="" id="unavailable">
-                      </div>  
-                      <div class="form-group col-md-6 form-small-grid-item">
-                        <label for="rate">Rate ($/night)</label>
-                        <input type="text" class="form-control short-input" id="rate">
-                      </div>
-                      <button type="submit" class="btn btn-light submit-btn">Update</button>
-                    </form>
-                  </div>
-                </div>
-                <hr class="hr" />
-                <div id="requests-manager">
-                  <h5>Requests</h5>
-                  <ol class="list-group">
-                    <p>No Requests Yet</p>
-                  </ol>
                 </div>
               </div>
             </div>
